@@ -4,9 +4,13 @@
 
  Changes between 0.9.8 and 0.9.9  [xx XXX xxxx]
 
+  *) Support for PKCS#1 RSAPublicKey format on rsa utility command line.
+     [Steve Henson]
+
   *) Remove the ancient ASN1_METHOD code. This was only ever used in one
      place for the (very old) "NETSCAPE" format certificates which are now
      handled using new ASN1 code equivalents.
+     [Steve Henson]
 
   *) Let the TLSv1_method() etc. functions return a 'const' SSL_METHOD
      pointer and make the SSL_METHOD parameter in SSL_CTX_new,
